fix horizontal overflow in chat bubbles

--- a/assets/css/chat.less
+++ b/assets/css/chat.less
@@ -87,6 +87,7 @@ div.chat-separator {
   padding: 5px 10px;
   margin: 0.5em 0;
   min-height: 10px;
+  overflow-x: auto;
 
   pre {
     font-size: 90%;
